forgot some stuff here, urls and some changes to front, templates and urls, as well as gitignore

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -10,4 +10,16 @@ index.html
 </p>
 {% endfor %}
 
-<p>And here are some pages: {% for page in pages %}<a href="{{page.permalink}}">{{page.title}}</a>, {% endfor %}</p>
+<p>And here are some pages:</p>
+<ul>
+{% for page in pages %}
+	<li><a href="{{page.permalink}}">{{page.title}}</a></li>
+	{% if page.subpages %}
+	<ul>
+	{% for subpage in page.subpages %}
+		<li><a href="{{subpage.permalink}}">{{subpage.title}}</a></li>
+	{% endfor %}
+	</ul>
+	{% endif %}
+{% endfor %}
+</ul>
