comments, taxonomy fix, comment forms, now active

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -11,6 +11,7 @@ index.html
 	{% else %}
 		{{post.content|truncatewords:5|striptags}}
 	{% endif %}
+	<br /><small>Comments: {{post.comments_count}}</small>
 </p>
 {% endfor %}
 
