juice forms now live (beta with 3 field types)

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -17,6 +17,9 @@ index.html
 </p>
 {% endfor %}
 
+<h3>Here's a contact form:</h3>
+{{contact_form}}
+
 <p><strong>And here are some pages:</strong></p>
 {% include "snippets/pages_tree.html" %}
 
@@ -40,6 +43,3 @@ index.html
 
 <p><strong>And of course a daily archive:</strong></p>
 <p>{% posts_archive daily %}</p>
-
-
-
