--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -18,7 +18,10 @@ index.html
 {% endfor %}
 
 <h3>Here's a contact form:</h3>
+<form action="{% url front.views.index %}" method="POST">
 {{contact_form}}
+<input type="submit" />
+</form>
 
 <p><strong>And here are some pages:</strong></p>
 {% include "snippets/pages_tree.html" %}
