analytics module now with tracking codes for Google Analytics and Yandex Metrica

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -1,5 +1,9 @@
 {% load taxonomy %}
 {% load posts %}
+{% load analytics %}
+
+{% google_analytics UA-5187250-5 %}
+{% yandex_metrica 12345 %}
 index.html
 
 <p>This page will contain a list of all posts and their excerpts (Posts Module):</p>
