introducing the new juice.chunks (inspired by django-chunks), not much difference yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% load taxonomy %}
 {% load posts %}
 {% load analytics %}
+{% load chunks %}
+
+There'll be a chunk at the top here: {% chunk "hello" %}
+
+<br /><br />
 
 {% google_analytics UA-5187250-5 %}
 {% yandex_metrica 12345 %}
