adding some style to the default template thanks to Qartin: now using juice.chunks and Django template inheritance

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% load analytics %}
 {% load chunks %}
 
-There'll be a chunk at the top here: {% chunk "hello" %}
+There'll be a chunk at the top here: {% chunk "hello" %} <br />
+Here's a global var: {{ global.title }}
 
 <br /><br />
 
