--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,9 @@
     <div id="col-top"></div>
     <div id="col" class="box">
 		<h1>{{ page.title }}</h1>
-		<p>{{ page.content|safe }}</p>
+		<div class="content">
+			<p>{{ page.content|safe }}</p>
+		</div>
     </div> <!-- /col -->
     <div id="col-bottom"></div>
 {% endblock %}
