comment form now via juice.forms, form processing upgrade, now with feedback on demand

--- a/templates/kovshenin/base.html
+++ b/templates/kovshenin/base.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/static/css/960.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="/static/css/style.css" type="text/css" media="screen" />
 	<link rel="shortcut icon" href="/static/images/favicon.ico" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+	{% block scripts %}
+	{% endblock %}
 </head>
 <body>
 	<div id="head">
