--- a/templates/kovshenin/page.html
+++ b/templates/kovshenin/page.html
@@ -1,4 +1,4 @@
-{% extends "kovshenin/base.html" %}
+{% extends "base.html" %}
 {% load humanize %}
 {% block content %}
 	<div class="post page-{{ page.id }}">
