--- a/templates/kovshenin/post.html
+++ b/templates/kovshenin/post.html
@@ -1,7 +1,6 @@
-{% extends "kovshenin/base.html" %}
+{% extends "base.html" %}
 
 {% load humanize %}
-{% load mptt_tags %}
 
 {% block content %}
 	<div class="post post-{{ post.id }}">
@@ -26,74 +25,8 @@
 	</div>
 	<div class="clear"></div>
 	
-	{# Comments Template #}
-	<div class="comments-template">
-		<h3 id="comments">{{ post.comments.count }} response{{ post.comments.count|pluralize }} to &laquo;{{ post.title }}&raquo;</h3>
-		{% if post.comments %}
-		<ol class="commentlist">
-			{# Threaded comments #}
-			{% for comment,structure in post.comments|tree_info %}
-				{# The reason we're having these nested statements is that parent nodes are children of ol nodes (written above) and #}
-				{# children (replies to comments) are nested inside ul nodes (declared inside the loop) #}
-				{% if structure.new_level and comment.level %}<ul class="children"><li>{% else %}{% if comment.level > 0 %}</li>{% endif %}<li>{% endif %}
-				
-					<div id="div-comment-{{ comment.id }}" class="comment-body">
-						<div class="comment-author vcard">
-							<a href="#"><img alt="" src="{{ comment.avatar }}?s=32" class="avatar avatar-32 photo" height="32" width="32" /></a>
-							<cite class="fn"><a href="#" rel="external nofollow" class="url">{{ comment.name }}</a></cite>
-						</div>
-						<div class="comment-meta commentmetadata">{{ comment.published }}</div>
-						<p>{{ comment.content }}</p>
-						
-						<div class="reply">
-							<a rel='nofollow' class='comment-reply-link' href='/wordpress/plugins/twitter-friendly-links/?allcomments&#038;replytocom=717#respond' onclick='return addComment.moveForm("div-comment-717", "717", "respond", "712")'>Reply</a>
-						</div>
-					</div>
-
-				{% for level in structure.closed_levels %}</li>{% if level > 0 %}</ul>{% endif %}{% endfor %}
-			{% endfor %}
-		</ol>
-		{% endif %}
-		
-		{# Respond #}
-		<div id="respond">
-			<h3>Leave a Reply</h3>
-			<div class="cancel-comment-reply">
-				<small><a rel="nofollow" id="cancel-comment-reply-link" href="/wordpress/plugins/twitter-friendly-links/?allcomments#respond" style="display:none;">Click here to cancel reply.</a></small>
-			</div>
-
-			<form action="http://kovshenin.com/core/wp-comments-post.php" method="post" id="commentform">
-				<p>
-					<input type="text" name="author" id="author" value="" size="22" tabindex="1" />
-					<label for="author"><small>Name (required)</small></label>
-				</p>
-				<p>
-					<input type="text" name="email" id="email" value="" size="22" tabindex="2" />
-					<label for="email"><small>Mail (will not be published) (required)</small></label>
-				</p>
-				<p>
-					<input type="text" name="url" id="url" value="" size="22" tabindex="3" />
-					<label for="url"><small>Website</small></label>
-				</p>
-				<p>
-					<input type="text" name="twitter" id="twitter" value="" size="22" tabindex="4" />
-					<label for="twitter"><small>Twitter</small></label>
-				</p>
-				<p>
-					<textarea name="comment" id="comment" tabindex="5"></textarea>
-				</p>
-				<p style="clear: both;" class="subscribe-to-comments">
-					<input type="checkbox" name="subscribe" id="subscribe" value="subscribe" style="width: auto;" />
-					<label for="subscribe">Notify me of followup comments via e-mail</label>
-				</p>
-				<p>
-					<input name="submit" type="submit" id="submit" tabindex="5" value="Submit Comment" /><br /><br />
-					<input type='hidden' name='comment_post_ID' value='712' id='comment_post_ID' />
-					<input type='hidden' name='comment_parent' id='comment_parent' value='0' />
-					<input type="hidden" name="redirect_to" value="http://kovshenin.com/wordpress/plugins/twitter-friendly-links/?allcomments" />
-				</p>
-			</form>
-		</div>
-	</div>
+	{% with post as obj %}
+	{% include "comments_template.html" %}
+	{% endwith %}
 
 {% endblock %}
