--- a/templates/kovshenin/static/css/style.css
+++ b/templates/kovshenin/static/css/style.css
@@ -284,7 +284,7 @@ span.tagged a {
 	margin-top: 10px;
 }
 
-#comment {
+#comment-form textarea {
 	width: 100%;
 	height: 100px;
 }
@@ -332,7 +332,7 @@ ol.commentlist li, ul.children li {
 	margin-bottom: 20px;
 }
 
-#commentform p {
+#comment-form p {
 	margin-left: 0;
 }
 
