--- a/templates/kovshenin/post.html
+++ b/templates/kovshenin/post.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load humanize %}
+{% load social %}
 
 {% block content %}
 	<div class="post post-{{ post.id }}">
@@ -12,8 +13,7 @@
 
 		<div class="meta">
 			<div class="share">
-				<a href="http://twitter.com/?status=Amazon+Web+Services%3A+Cloud+Computing+Free+of+Charge+http%3A%2F%2Fkovshenin.com%2F%3Fp%3D2608" class="retweet-anywhere" title="Retweet This Post" rev="" rel="2608"><img src="http://kovshenin.com/core/wp-content/themes/kovshenin-960/images/retweet.png" alt="Retweet" /></a>
-				<!--<fb:like layout="button_count" show_faces="false" width="90" font="tahoma" href="http://kovshenin.com/archives/amazon-web-services-cloud-computing-free-of-charge/"></fb:like>-->
+				{% social "juice-social-share" post %}
 			</div>
 
 			<p class="links">
