added a slogan to default template, styled accordingly, valid through juice chunks

--- a/templates/kovshenin/base.html
+++ b/templates/kovshenin/base.html
@@ -21,7 +21,7 @@
 	<div id="head">
 		<div class="container_12">
 			<div class="grid_9 logo">
-				<span>&#167;</span><h1><a href="{{ global.home }}">{% chunk "title" %}</a></h1>
+				<span>&#167;</span><h1><a href="{{ global.home }}">{% chunk "title" %}<em class="slogan">{% chunk "slogan" %}</em></a></h1>
 
 			</div>
 			<div class="grid_3 search">
