--- a/templates/kovshenin/base.html
+++ b/templates/kovshenin/base.html
@@ -1,4 +1,5 @@
 {% load chunks %}
+{% load social %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 			<head profile="http://gmpg.org/xfn/11">
@@ -101,7 +102,7 @@
 			<div class="grid_3 sidebar">
 				{% block sidebar %}
 				<div class="social">
-					social
+					{% social "juice-social-profiles" %}
 					<div class="tag-cloud">
 						<!-- Tag cloud goes here -->
 						cloud
