--- a/templates/kovshenin/home.html
+++ b/templates/kovshenin/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% load social %}
 {% block content %}
 	{% for post in posts %}
 		<div class="post post-{{ post.id }}">
@@ -11,7 +12,7 @@
 
 			<div class="meta">
 				<div class="share">
-					share
+					{% social "juice-social-share" post %}
 				</div>
 
 				<p class="links">
