--- a/templates/kovshenin/base.html
+++ b/templates/kovshenin/base.html
@@ -1,5 +1,6 @@
 {% load chunks %}
 {% load social %}
+{% load analytics %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 			<head profile="http://gmpg.org/xfn/11">
@@ -15,6 +16,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	{% block scripts %}
 	{% endblock %}
+	{% google_analytics "UA-5187250-5" %}
 </head>
 <body>
 	<div id="head">
