base template bottom links, appengine models now compatible with text (post, page), dummy module enhanced with lipsum

--- a/templates/kovshenin/base.html
+++ b/templates/kovshenin/base.html
@@ -151,7 +151,7 @@
 			<div class="grid_9 alpha">
 				<img style="float: left" src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
 				<p style="margin-left: 10px; float: left; font-size: 0.8em; width: 550px;">
-					We're proudly powered by <a href="#">Google AppEngine</a>, <a href="#">Django</a> and the legendary <a href="#">Juice Toolkit</a>. If you have any comments or suggestions, browse the <a href="">Feedback</a> section. If you're willing to contribute, hit me on <a href="http://twitter.com/kovshenin">Twitter</a>.
+					We're proudly powered by <a href="http://code.google.com/appengine/">Google AppEngine</a>, <a href="http://www.djangoproject.com/">Django</a> and the legendary <a href="http://juice-toolkit.appspot.com/">Juice Toolkit</a>. If you have any comments or suggestions, browse the <a href="/feedback/">Feedback</a> section. If you're willing to contribute, hit me on <a href="http://twitter.com/kovshenin">Twitter</a>.
 				</p>
 			</div>
 			<div class="grid_3 omega">
